web_static/static/styles/main_vid.css
/*--------------------------------------------*/
/*              Reset CSS                     */
/*--------------------------------------------*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-size: 100%;
  vertical-align: baseline;
  background: transparent;
}
@font-face {
  font-family: 'Bebas Neue';
  src: url('../fonts/bebasNeue_Regular.eot');
  src: url('../fonts/bebasNeue_Regular.ttf') format('truetype'), /* Safari, Android, iOS */
      url('../fonts/bebasNeue_Regular.woff2') format('woff2'),
      url('../fonts/bebasNeue_Regular.woff') format('woff'), /* Modern Browsers */
      url('../fonts/bebasNeue_Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
      url('../fonts/bebasNeue_Regular.svg#svgFontName') format('svg'); /* Legacy iOS */
}
body, html {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}

/* No olvides definir estilos para focus */
:focus {
  outline: 0;
}

/* No olvides resaltar de alguna manera el texto insertado/borrado */
ins {
  text-decoration: none;
}
del {
  text-decoration: line-through;
}

/* En el código HTML es necesario añadir cellspacing="0" */
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/*=====================================================================*/
/*                               DESIGN                                */
/*=====================================================================*/
.body {
  background-color: rgb(53, 34,35);
  font-family: 'Bebas Neue', cursive;
  color: white;
}

/*----- NAVIGATION BAR ---------*/
.navbar1{
  font-family: 'Bebas Neue', cursive;
  width: 30%;
  float: left;
}
#i-navbar{
    width: 60%;
    margin-top: 5%;
}
nav a{
  color: white;
}
nav a:hover {
  color: red;
  text-decoration: none;
}

.original {
  font-size: 180%;
}
.original_mobile {
  position: absolute;
  top: 32vw;
  left: calc(50% -4vw);
  width: 8vw;
  height: 8vw;
  background-color: rgba(255, 255, 255, 0.6);
  clip-path: polygon(0% 0%, 100% 50%, 0% 100%, 0% 0%);
}

/*------- MAIN ----------*/
.principal img{
  width: 90%;
  margin-left: 5%;
  margin-right: auto;
  margin-top: -10%;
}

/*--------- SLIDER -----------------*/
#primer-slider{
  display: flexbox;
  font-family: 'Bebas Neue', cursive;
  text-align: center;
  letter-spacing: -0.5px;
  transform: scale(1, 1.3);
}
.line-up-1 > div {
  display: inline-block;
  vertical-align: bottom;
  margin-bottom: -0.1%;
}
.in-names-1 {
  position: relative;
  width: max-content;
  font-size: 50%;
}
.in-names-all {
  position: relative;
  margin-left: auto;
  margin-right: auto;
  width: max-content;
  margin-top: -0.8%;
  font-size: 50%;
}
.in-con {
  position: relative;
  width: max-content;
  font-size: 50%;
}
.line-up-2 > div {
  position: relative;
  display: inline-block;
  vertical-align: top;
  margin-top: -1%;
}
.in-camara {
  position: relative;
  width: max-content;
  font-size: 50%;
}
.in-names-2 {
  position: relative;
  width: max-content;
  font-size: 50%;
}
.in-edicion {
  position: relative;
  width: max-content;
  font-size: 50%;
}
.in-daza {
  position: relative;
  width: max-content;
  font-size: 50%;
}
.movie-from {
  position: relative;
  margin-top: -8%;
  width: max-content;
  margin-left: auto;
  margin-right: auto;
}

.movie-from > div {
  display: inline-block;
}
.in-peli {
  position: relative;
  vertical-align: middle;
  text-align: right;
  line-height: 68%;
  width: max-content;
  font-size: 45%;
}
.in-names-3 {
  position: relative;
  letter-spacing: -0.5px;
  vertical-align: middle;
  font-size: 60%;
  transform: scale(1, 1.3);
  width: max-content;
}
#segundo-slider{
  text-align: center;
  font-family: 'Arial', cursive;
  font-size: 60%;
  letter-spacing: -1px;
}

/*---------- FOOTER ----------------*/
footer{
  text-align: center;
  font-family: 'Bebas Neue', cursive;
  position: fixed;
  bottom: 0;
  left: 0;
}

.credits{
  display: inline-block;
  position: relative;
  font-family: 'Bebas Neue', cursive;
}
.credits-scale {
  display: inline-block;
  font-size: 55%;
  transform: scale(1, 1.3);
}
  
#img-sabor{
  width: 25%;
}
#img-mini{
  width: 20%;
}

/*---------- FOOTER 2 ----------------*/
.landscape {
  font-family: 'Bebas Neue', cursive;
  position: absolute;
  width: 100%;
  bottom: 0;
}

.produccion {
  position: relative;
  font-size: 55%;
  transform: scale(1, 1.3);
  margin-left: auto;
  margin-right: auto;
  width: max-content;
}

.apoyo {
  position: relative;
  font-size: 55%;
  transform: scale(1, 1.3);
  margin-top: 4%;
  margin-left: auto;
  margin-right: auto;
  width: max-content;
}

.img-sabor {
  margin-top: -6%;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  width: 25%;
}
.img-mini {
  margin-top: -6%;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  width: 20%;
}

/* WINDOW VIDEO STYLES */
/* ------------------------- */
/*          POPUP            */
/* ------------------------- */

.vid {
  position: relative;
  overflow: hidden;
  width: 100%;
  height: 0;
  padding-top: 56.25%;
}
.responsive-frame {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.overlay {
	background: rgba(0,0,0,.3);
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	align-items: center;
	justify-content: center;
	display: flex;
  visibility: hidden;
  z-index: 99;
}

.overlay.active {
	visibility: visible;
}

.popup {
  position: absolute;
	background: #F8F8F8;
	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
	border-radius: 3px;
	font-family: 'Bebas Neue', sans-serif;
	padding: 3%;
	text-align: center;
  width: 100%;
	
	transition: .3s ease all;
	transform: scale(0.7);
	opacity: 0;
}

.popup .btn-cerrar-popup {
	font-size: 16px;
	line-height: 16px;
	display: block;
	text-align: right;
	transition: .3s ease all;
	color: #BBBBBB;
}

.popup .btn-cerrar-popup:hover {
	color: #000;
}

/* ------------------------- */
/*       ANIMATIONS         */
/* ------------------------- */
.popup.active {	transform: scale(1); opacity: 1; }


/* ------------------------- */
/*    MOBILE - RESPONSIVE    */
/* ------------------------- */

@media screen and (min-width: 414px) {
  /*----------- SLIDER -------------*/
  .in-con {
    font-size: 55%;
  }
  .in-names-1 {
    font-size: 55%;
  }
  .in-names-all {
    font-size: 55%;
  }
  .in-camara {
    font-size: 55%;
  }
  .in-names-2 {
    font-size: 55%;
  }
  .in-edicion {
    font-size: 55%;
  }
  .in-daza {
    font-size: 55%;
  }
  .in-names-all {
    margin-top: -0.5%;
  }
  .line-up-2 {
    margin-top: 0.4%;
  }
  .movie-from {
    padding: 2%;
  }


}
@media screen and (min-width: 568px) {
  /*-----NAVIGATION BAR ---------*/
  .navbar1 {
    width: 20%;
  }
  .original_mobile {
    top: 8vw;
    width: 5vw;
    height: 5vw;

  }
  /*------- MAIN ----------*/
  .principal {
    width: 50%;
    margin-left: auto;
    margin-right: auto;
  }
  /*------ WINDOW VIDEO STYLES [Popup] -----*/
  .popup {
    width: 60%;
  }
  /*----------- SLIDER -------------*/
  #primer-slider {
    margin-top: -0.5%;
  }
  .in-con {
    font-size: 60%;
  }
  .in-names-1 {
    font-size: 60%;
  }
  .in-names-all {
    font-size: 60%;
  }
  .in-camara {
    font-size: 60%;
  }
  .in-names-2 {
    font-size: 60%;
  }
  .in-edicion {
    font-size: 60%;
  }
  .in-daza {
    font-size: 60%;
  }
  .in-names-all {
    margin-top: -0.55%;
  }
  .line-up-2 {
    margin-top: 0.4%;
  }
  .movie-from {
    margin-top: -6.5%;
  }
  /*------------ FOOTER -------------*/
  .landscape {
    text-align: center;
  }
  .landscape > div {
    display: inline-block;
  }
  .produccion {
    vertical-align: bottom;
  }
  .apoyo {
    vertical-align: bottom;
  }
  .img-sabor {
    width: 10%;
    vertical-align: middle;
  }
  .img-mini {
    width: 8%;
    vertical-align: middle;
  }
  
  

}

@media screen and (min-width: 667px) {
  /*------- SLIDER ----------*/
  .in-con {
    font-size: 65%;
  }
  .in-names-1 {
    font-size: 65%;
  }
  .in-names-all {
    font-size: 65%;
  }
  .in-camara {
    font-size: 65%;
  }
  .in-names-2 {
    font-size: 65%;
  }
  .in-edicion {
    font-size: 65%;
  }
  .in-daza {
    font-size: 65%;
  }
  .in-names-all {
    margin-top: -0.55%;
  }
  .line-up-2 {
    margin-top: 0.4%;
  }
  .movie-from {
    margin-top: -8%;
    padding: 2%;
  }

  #segundo-slider {
    font-size: 70%;
  }

}

@media screen and (min-width: 736px) {
  /*------- SLIDER ----------*/
  .movie-from {
    margin-top: -7%;
  }
}

@media screen and (min-width: 768px) {
  /*------- SLIDER ----------*/
  .in-con {
    font-size: 60%;
  }
  .in-names-1 {
    font-size: 60%;
  }
  .in-names-all {
    font-size: 60%;
  }
  .in-camara {
    font-size: 60%;
  }
  .in-names-2 {
    font-size: 60%;
  }
  .in-edicion {
    font-size: 60%;
  }
  .in-daza {
    font-size: 60%;
  }

  .in-names-all {
    margin-top: -0.56%;
  }
  .line-up-2 {
    margin-top: 0.37%;
  }
  .movie-from {
    margin-top: -5%;
    padding: 2%;
  }
  
}

@media screen and (min-width: 950px) {
  /*-----NAVIGATION BAR ---------*/
  .original_mobile {
    top: 12vw;
    width: 5vw;
    height: 5vw;

  }
  /*------- MAIN ----------*/
  .principal img{
    width: 90%;
    margin-top: -3%;
  }
  /*------- SLIDER ----------*/
  #primer-slider {
    margin-top: 1%;
  }
  .in-con {
    font-size: 100%;
  }
  .in-names-1 {
    font-size: 100%;
  }
  .in-names-all {
    font-size: 100%;
  }
  .in-camara {
    font-size: 100%;
  }
  .in-names-2 {
    font-size: 100%;
  }
  .in-edicion {
    font-size: 100%;
  }
  .in-daza {
    font-size: 100%;
  }

  .in-names-all {
    margin-top: -0.5%;
  }
  .line-up-2 {
    margin-top: 0.5%;
  }
  .movie-from {
    margin-top: -4%;
    padding: 2%;
  }
  .in-peli {
    font-size: 70%;
  }

  .in-names-3 {
    font-size: 100%;
  }

  #segundo-slider {
    font-size: 90%;
  }

  /*---------- FOOTER ----------------*/
.produccion {
  font-size: 100%;
  transform: scale(1, 1.3);
}

.apoyo {
  font-size: 100%;
  transform: scale(1, 1.3);
}

.img-sabor {
  width: 10%;
}
.img-mini {
  width: 10%;
}
  
}

